[package]
name = "oml"
version = "0.0.2"
edition = "2021"
rust-version = "1.70"
license = "MIT"
repository = "https://github.com/fawdlstty/oml"
homepage = "https://github.com/fawdlstty/oml"
description = "Open Markup Language!"
keywords = ["oml", "markup", "configuration"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7.11"
pest_derive = "2.7.11"

[features]
default = []
